fix: removed no more needed flags from JAVA_OPTS